# sstable-to-arrow

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  client.ipynb  clustering_blocks.cpp  clustering_blocks.h  columns_bitmask.cpp  data.cql  deserialization_helper.cpp  deserialization_helper.h  main.cpp  main.h  makefile  modified_utf8.cpp  modified_utf8.h  sstable_data.ksy  sstable_index.ksy  sstable_statistics.ksy  sstable_summary.ksy  task_debug  test_client.ipynb  types.cql  vint.h  write_sstable
.devcontainer/: devcontainer.json
.github/workflows/: docker-release.yml
client/: .gitignore  0_intro.md  1_2_plain_cql.ipynb  1_plain_cql.ipynb  2_cassandra_to_arrow.ipynb  3_no_cuda.ipynb  3_sstable_to_arrow.ipynb  4_next_steps.md  4_with_cuda.ipynb  README.md  arrow_testing.ipynb  blog_post_1.md  blog_post_2.md  client.ipynb  config.py  cudf_requirements.txt  example.pyx  no_cuda.py  python_client.ipynb  requirements.txt  setup.py  utils.py  with_cuda.py
cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  main.h  msg.txt  profile-cpp  read_with_duckdb.py
cpp/.devcontainer/: devcontainer.json
cpp/conversion_lib/: CMakeLists.txt  conversion_helper.cpp  io.h
cpp/exe/: CMakeLists.txt  cli_args.cpp  cli_args.h  main.cpp  main.h
cpp/ksy/: sstable_data.ksy  sstable_index.ksy  sstable_summary.ksy
cpp/opaque/: clustering_blocks.cpp  clustering_blocks.h  columns_bitmask.cpp  columns_bitmask.h  deserialization_helper.cpp  deserialization_helper.h  modified_utf8.cpp  modified_utf8.h  vint.cpp  vint.h
cpp/parser/: CMakeLists.txt  Config.cmake.in
cpp/parser/ksy/: sstable_compression_info.ksy  sstable_data.ksy  sstable_statistics.ksy
cpp/parser/opaque/: clustering_blocks.cpp  clustering_blocks.h  columns_bitmask.cpp  columns_bitmask.h  conversions.cpp  conversions.h  deserialization_helper.cpp  deserialization_helper.h  modified_utf8.cpp  modified_utf8.h  vint.cpp  vint.h
cpp/python/: CMakeLists.txt  example.py  main.py  sstable_to_pyarrow.cpp  sstable_to_pyarrow.h.in  testing.py
cpp/sample_data/baselines/iot-5b608090e03d11ebb4c1d335f841c590/: md-2-big-CRC.db  md-2-big-Digest.crc32  md-2-big-Statistics.db
cpp/src/: CMakeLists.txt  Config.cmake.in  api.cpp  api.h  conversion_helper.cpp  conversion_helper.h  inspect_files.cpp  inspect_files.h  io.cpp  io.h  lz4_stream.h  opts.cpp  opts.h  sstable.cpp  sstable.h  sstable_to_arrow.cpp  sstable_to_arrow.h  streaming_sstable_data.cpp  streaming_sstable_data.h
cpp/sstable_parser_lib/: CMakeLists.txt
cpp/sstable_parser_lib/ksy/: deletion_time.ksy
cpp/sstable_parser_lib/opaque/: deserialization_helper.cpp
cpp/test/: append_to_builder.cpp  opaque_types.cpp  sample_data.cpp  sstable_to_arrow.cmake
cpp/util/: columns_bitmask.h  conversion_helper.cpp  conversion_helper.h  conversions.cpp  conversions.h  deserialization_helper.cpp  deserialization_helper.h  inspect_files.cpp  inspect_files.h  io.cpp  io.h  modified_utf8.cpp  opts.cpp  opts.h  sstable.cpp  sstable.h  sstable_to_arrow.cpp  sstable_to_arrow.h  timer.cpp  timer.h  vint.cpp
data/SSTableToArrowTesting/Standard/: bb-1-bti-CompressionInfo.db  bb-1-bti-Data.db  bb-1-bti-Filter.db  bb-1-bti-Partitions.db  bb-1-bti-TOC.txt
data/store/shopping_cart-13f17ea0d32011ebb0269116fc548b6b/: md-1-big-Digest.crc32
data/test_keyspace/test_table-8ae9e630d2aa11ebbcd94b7a475a76be/: md-1-big-CompressionInfo.db  md-1-big-Data.db  md-1-big-Filter.db  md-1-big-Index.db  md-1-big-Statistics.db  md-1-big-Summary.db  md-1-big-TOC.txt
data2/store/shopping_cart-299c6500d32811ebb0629116fc548b6b/: md-1-big-Digest.crc32  md-1-big-Filter.db  md-1-big-Index.db  md-1-big-Statistics.db
data3/store/shopping_cart-af4e4060d36911ebb9469116fc548b6b/: md-1-big-Data.db  md-1-big-Digest.crc32  md-1-big-Filter.db  md-1-big-Statistics.db  md-1-big-TOC.txt
iot-5/baselines/iot-62fdde50e32211ebb38521ac783c0b68/: md-2-big-Digest.crc32
java/: .gitignore  README.md  pom.xml  profile
java/src/resources/: cassandra.yaml
ksy/: sstable_data.ksy  sstable_statistics.ksy  sstable_summary.ksy
res/cql/: data.cql  datasets.cql  testalltypes.cql  testtypes1.cql
res/datasets/iris-61826a90d57c11eba8009b89c16b65a4/: md-1-big-CRC.db  md-1-big-Data.db  md-1-big-Digest.crc32  md-1-big-Index.db  md-1-big-Statistics.db
res/datasets/iris-87486090d58b11ebb08ed7ee8570c286/: md-1-big-CRC.db  md-1-big-Data.db  md-1-big-Filter.db  md-1-big-Statistics.db
res/hello/bar-fee8cdb0d7e311ebab539116fc548b6b/: md-1-big-CRC.db  md-1-big-Digest.crc32  md-1-big-Statistics.db  md-2-big-Digest.crc32  md-2-big-Statistics.db
res/hello/foo-c2cebe20d60d11ebab539116fc548b6b/: md-1-big-CRC.db  md-1-big-Digest.crc32  md-1-big-Statistics.db  md-2-big-Data.db  md-2-big-Digest.crc32  md-2-big-Summary.db
res/hello/world-dc8a12c0d60c11ebab539116fc548b6b/: md-1-big-CRC.db  md-1-big-Filter.db  md-2-big-Data.db  md-2-big-Digest.crc32  md-2-big-Index.db  md-2-big-Summary.db
res/old/scona-6bb487f0d7e811ebab539116fc548b6b/: md-1-big-CRC.db  md-1-big-Data.db  md-1-big-Digest.crc32  md-1-big-Statistics.db
sample_data/: keyvalue-out.csv  keyvalue.csv
src/: main.cpp  main.h  sstable_to_arrow.cpp  sstable_to_arrow.h
src/ksy/: basic_types.ksy  deletion_time.ksy  sstable_data.ksy  sstable_index.ksy  sstable_summary.ksy
src/util/: clustering_blocks.cpp  clustering_blocks.h  columns_bitmask.cpp  columns_bitmask.h  deserialization_helper.cpp  deserialization_helper.h  modified_utf8.h  vint.cpp  vint.h  vint.js
test/: generate-data  profile-cpp  profile-java  vint.js
test/cql/: testalltypes.cql
util/: clustering_blocks.cpp  columns_bitmask.cpp  conversions.cpp  conversions.h  deserialization_helper.cpp  deserialization_helper.h  sstable_to_arrow.cpp  sstable_to_arrow.h  timer.cpp  timer.h  vint.cpp  vint.h
vis/: data_vis.ksy
visualization/: sstable_data.ksy  sstable_data_modified.dot  sstable_data_viz.ksy  sstable_index.ksy  sstable_index_modified.dot  sstable_statistics.ksy  sstable_statistics_modified.dot  sstable_summary.ksy  sstable_summary_modified.dot
(+472 files in other folders)
